--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,10 @@
         <coveralls.version>4.3.0</coveralls.version>
         <jacoco.version>0.7.8</jacoco.version>
         <crash-connectors.version>1.3.2</crash-connectors.version>
-        <cqengine.version>2.9.2</cqengine.version>
+        <cqengine.version>3.6.0</cqengine.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <chronicle-map.version>3.24ea4</chronicle-map.version>
+        <fury-core.version>0.8.0</fury-core.version>
         <!-- Startup class -->
         <application.class>com.maxdemarzi.server.Server</application.class>
     </properties>
@@ -41,6 +43,18 @@
             <groupId>com.googlecode.cqengine</groupId>
             <artifactId>cqengine</artifactId>
             <version>${cqengine.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-map</artifactId>
+            <version>${chronicle-map.version}</version>
+        </dependency>
+
+        <!-- Serialization -->
+        <dependency>
+            <groupId>org.apache.fury</groupId>
+            <artifactId>fury-core</artifactId>
+            <version>${fury-core.version}</version>
         </dependency>
 
         <!-- Server -->
